Added website html,css and js

--- a/Project/devsoft-project/site/busca.html
+++ b/Project/devsoft-project/site/busca.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8">
 
   <!-- Page title -->
-  <title>Análise de dados | Estágios</title>
+  <title>Análise de dados | Estágios: Busca</title>
 
   <!-- Mobile-friendly -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,6 +17,9 @@
 
   <!-- Project's main CSS file -->
   <link rel="stylesheet" href="stylesheets/main.css">
+
+
+  <link rel="stylesheet" href="stylesheets/busca.css">
 
   <!-- Favicon (browser icon) -->
   <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -34,7 +37,7 @@
 
   </div>
   
-    <nav id="main-menu">
+    <nav id="main-menu" style="border-bottom: solid 2px rgba(97, 118, 172, .6);">
       <div  class="row" >
         <div class="col-md-1" >
         </div>
@@ -50,7 +53,7 @@
          <div class="col-md-2 item-menu"  onclick="navega_item(this);">
           <a href="descricao_palavras-chave.html">Descrição: Palavras-chave</a>
         </div>
-         <div class="col-md-2 item-menu ultimo-menu"  onclick="navega_item(this);">
+         <div class="col-md-2 item-menu ultimo-menu item-selecionado"  onclick="navega_item(this);">
           <a href="busca.html">Busca</a>
         </div>
         <div class="col-md-1">
@@ -61,9 +64,61 @@
   </header>
 
   <div id="main-content">
-    <p>
-      Clique em um item acima para visualizar os dados analisados.
-    </p>
+    <h2>Busca</h2>
+    <form name="form_busca" action="busca_resultados.html">
+      <div id="campos_considerados">
+        <p> <strong>Campos Considerados:</strong> </p>
+         <div  class="row">
+          <div class="col-md-2">
+            <input type="checkbox" name="habilitacao" > Habilitação
+          </div>
+           <div class="col-md-2">
+            <input type="checkbox" name="empresa" > Empresa
+          </div>
+           <div class="col-md-2">
+            <input type="checkbox" name="descricao" > Descrição
+          </div>
+           <div class="col-md-2">
+            <input type="checkbox" name="beneficios" > Benefícios
+          </div>
+           <div class="col-md-2">
+            <input type="checkbox" name="numero_de_vagas" > Número de vagas
+          </div>
+        </div>
+        <div  class="row">
+          <div class="col-md-2">
+            <input type="checkbox" name="titulo" checked> Título
+          </div>
+           <div class="col-md-2">
+            <input type="checkbox" name="area_de_atuacao" > Área de Atuação
+          </div>
+           <div class="col-md-2">
+            <input type="checkbox" name="requisitos" > Requisitos
+          </div>
+           <div class="col-md-2">
+            <input type="checkbox" name="contatos" > Contatos
+          </div>
+        </div>
+      </div>
+      <div  class="row">
+        <div class="col-md-9">
+          <input onfocus="campo_focus(this,'Digite o termo de busca')" onblur="campo_blur(this, 'Digite o termo de busca')" name="texto_busca" id="texto_busca" class="campo_vazio" type="text" maxlength="200" value="Digite o termo de busca">
+        </div>
+        <div class="col-md-3">
+          <input type="submit" value="Pesquisar" >
+        </div>
+      </div>
+    </form>
+    <div id="resultados">
+       <h2>Resultados</h2>
+       <p>
+        Tempo de Busca: 5s <br>
+        Vagas encontradas: 50
+       </p>
+       <p>
+        Muitos resultados encontrados. Faça uma nova pesquisa para refinar os resultados.
+       </p>
+    </div>
   </div>
 
   <footer> 
