--- a/Project/devsoft-project/site/busca_resultados.html
+++ b/Project/devsoft-project/site/busca_resultados.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8">
 
   <!-- Page title -->
-  <title>Análise de dados | Estágios</title>
+  <title>Análise de dados | Estágios: Resultados da Busca</title>
 
   <!-- Mobile-friendly -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,6 +17,9 @@
 
   <!-- Project's main CSS file -->
   <link rel="stylesheet" href="stylesheets/main.css">
+
+
+  <link rel="stylesheet" href="stylesheets/busca.css">
 
   <!-- Favicon (browser icon) -->
   <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -34,7 +37,7 @@
 
   </div>
   
-    <nav id="main-menu">
+    <nav id="main-menu" style="border-bottom: solid 2px rgba(97, 118, 172, .6);">
       <div  class="row" >
         <div class="col-md-1" >
         </div>
@@ -50,7 +53,7 @@
          <div class="col-md-2 item-menu"  onclick="navega_item(this);">
           <a href="descricao_palavras-chave.html">Descrição: Palavras-chave</a>
         </div>
-         <div class="col-md-2 item-menu ultimo-menu"  onclick="navega_item(this);">
+         <div class="col-md-2 item-menu ultimo-menu item-selecionado"  onclick="navega_item(this);">
           <a href="busca.html">Busca</a>
         </div>
         <div class="col-md-1">
@@ -61,9 +64,40 @@
   </header>
 
   <div id="main-content">
-    <p>
-      Clique em um item acima para visualizar os dados analisados.
-    </p>
+    <div class="row">
+       <div class="col-md-10">
+          <h2>Resultados</h2>
+        </div>
+        <div class="col-md-2 voltar">
+          <a href="javascript:window.history.back()">Voltar</a>
+        </div>
+    </div>
+    <div id="resultados">
+       <p>
+        Tempo de Busca: 5s <br>
+        Vagas encontradas: 50
+       </p>
+       <div id="inner_resultados">
+          <article id="res1">
+            <p>
+              Vaga #1234 <br>
+              Habilitação: Cursando Curso Semestral <br>
+              Título: Desenvolvimento Web <br>
+              Empresa: Foo -- Soluções Web <br>
+              ...
+            </p>
+          </article>
+          <article id="res1">
+            <p>
+              Vaga #1234 <br>
+              Habilitação: Cursando Curso Semestral <br>
+              Título: Desenvolvimento Web <br>
+              Empresa: Foo -- Soluções Web <br>
+              ...
+            </p>
+          </article>
+       </div>
+    </div>
   </div>
 
   <footer> 
