--- a/Project/devsoft-project/site/resumo.html
+++ b/Project/devsoft-project/site/resumo.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8">
 
   <!-- Page title -->
-  <title>Análise de dados | Estágios</title>
+  <title>Análise de dados | Estágios: Resumo</title>
 
   <!-- Mobile-friendly -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,6 +17,9 @@
 
   <!-- Project's main CSS file -->
   <link rel="stylesheet" href="stylesheets/main.css">
+
+
+  <link rel="stylesheet" href="stylesheets/resumo.css">
 
   <!-- Favicon (browser icon) -->
   <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -34,11 +37,11 @@
 
   </div>
   
-    <nav id="main-menu">
+    <nav id="main-menu" style="border-bottom: solid 2px rgba(97, 118, 172, .6);">
       <div  class="row" >
         <div class="col-md-1" >
         </div>
-        <div class="col-md-2 item-menu primeiro-menu" onclick="navega_item(this);">
+        <div class="col-md-2 item-menu primeiro-menu item-selecionado" onclick="navega_item(this);">
           <a href="resumo.html">Resumo</a>
         </div>
          <div class="col-md-2 item-menu"  onclick="navega_item(this);">
@@ -61,9 +64,34 @@
   </header>
 
   <div id="main-content">
+    <h2>Resumo dos dados analisados</h2>
     <p>
-      Clique em um item acima para visualizar os dados analisados.
+      Data de coleta: 20/04/2014 <br>
+      Total de páginas acessadas: XXX <br>
     </p>
+    <div id="div_chart">
+       <div class="row" >
+          <div class="col-md-7">
+            <h2>Vagas Analisadas</h2>
+          </div>
+           <div class="col-md-5">
+           </div>
+        </div>
+        <div class="row" >
+          <div class="col-md-7">
+            <canvas id="chart_resumo" width="300" height="300" ></canvas>
+          </div>
+           <div class="col-md-5" id="legenda">
+              <p>
+                Total: W <br>
+                Válidas: Z <br>
+                Em branco: X <br>
+                Duplicadas: Y <br>
+              </p>
+           </div>
+        </div>
+    </div>
+   
   </div>
 
   <footer> 
@@ -83,8 +111,10 @@
   <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
   <!-- Project's JavaScript files -->
+  <script src="javascripts/Chart.js"></script>
   <script src="javascripts/main.js"></script>
   <script src="javascripts/example.js"></script>
+  <script src="javascripts/resumo.js"></script>
 
 </body>
 </html>
