--- a/Project/devsoft-project/site/vagas_por_perido.html
+++ b/Project/devsoft-project/site/vagas_por_perido.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8">
 
   <!-- Page title -->
-  <title>Análise de dados | Estágios</title>
+  <title>Análise de dados | Estágios: Vagas por período</title>
 
   <!-- Mobile-friendly -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,6 +17,9 @@
 
   <!-- Project's main CSS file -->
   <link rel="stylesheet" href="stylesheets/main.css">
+
+
+  <link rel="stylesheet" href="stylesheets/vagas_por_periodo.css">
 
   <!-- Favicon (browser icon) -->
   <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -34,14 +37,14 @@
 
   </div>
   
-    <nav id="main-menu">
+    <nav id="main-menu" style="border-bottom: solid 2px rgba(97, 118, 172, .6);">
       <div  class="row" >
         <div class="col-md-1" >
         </div>
         <div class="col-md-2 item-menu primeiro-menu" onclick="navega_item(this);">
           <a href="resumo.html">Resumo</a>
         </div>
-         <div class="col-md-2 item-menu"  onclick="navega_item(this);">
+         <div class="col-md-2 item-menu item-selecionado"  onclick="navega_item(this);">
            <a href="vagas_por_perido.html">Vagas por Período</a>
         </div>
          <div class="col-md-2 item-menu"  onclick="navega_item(this);">
@@ -61,9 +64,44 @@
   </header>
 
   <div id="main-content">
+    <h2>Distribuição de vagas por data de publicação</h2>
     <p>
-      Clique em um item acima para visualizar os dados analisados.
+      Data Inicial: 20/04/2014 <br>
+      Data Final: 04/05/2014 <br>
     </p>
+    <div id="div_chart">
+      <h2>Vagas por período</h2> 
+      <div  class="row">
+        <div class="col-md-12">
+          <canvas id="chart_vagas" height="300" width="800" ></canvas>   
+        </div>
+      </div>
+      <div id="div_agrupamentos">
+        <div class="row">
+          <div  class="col-md-6">
+          </div>
+          <div  class="col-md-6">
+            <input type="checkbox"  value="mes" id="agrupamento"> Mês <br>
+          </div>
+        </div>
+        <div  class="row">
+          <div  class="col-md-6" id="titulo_agrupamento">
+            Agrupamento:&nbsp;&nbsp;
+          </div>
+          <div  class="col-md-6">
+            <input type="checkbox" value="quadrimestre" checked id="agrupamento"> Quadrimestre <br>
+          </div>
+        </div>
+        <div  class="row">
+          <div  class="col-md-6">
+          </div>
+          <div  class="col-md-6">
+            <input type="checkbox"  value="ano" id="agrupamento"> Ano <br>
+          </div>
+        </div>
+      </div>
+    </div>
+   
   </div>
 
   <footer> 
@@ -83,8 +121,10 @@
   <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
   <!-- Project's JavaScript files -->
+  <script src="javascripts/Chart.js"></script>
+
   <script src="javascripts/main.js"></script>
-  <script src="javascripts/example.js"></script>
+  <script src="javascripts/vagas_por_periodo.js"></script>
 
 </body>
 </html>
