Added site functionality

--- a/Project/devsoft-project/site/resumo.html
+++ b/Project/devsoft-project/site/resumo.html
@@ -66,8 +66,8 @@
   <div id="main-content">
     <h2>Resumo dos dados analisados</h2>
     <p>
-      Data de coleta: 20/04/2014 <br>
-      Total de páginas acessadas: XXX <br>
+      Data de coleta: <span id="data_coleta">?</span> <br>
+      Total de páginas acessadas: <span id="paginas_acessadas">?</span> <br>
     </p>
     <div id="div_chart">
        <div class="row" >
@@ -83,10 +83,10 @@
           </div>
            <div class="col-md-5" id="legenda">
               <p>
-                Total: W <br>
-                Válidas: Z <br>
-                Em branco: X <br>
-                Duplicadas: Y <br>
+                Total: <span id="span_total">?</span> <br>
+                Válidas: <span id="span_validas">?</span>  <br>
+                Em branco: <span id="span_em_branco">?</span>  <br>
+                Duplicadas: <span id="span_duplicadas">?</span>  <br>
               </p>
            </div>
         </div>
