--- a/Project/devsoft-project/site/descricao_palavras-chave.html
+++ b/Project/devsoft-project/site/descricao_palavras-chave.html
@@ -62,59 +62,16 @@
     </nav>
     
   </header>
-
-  <div id="main-content">
+  <div class="inv" id="carregando">
+    <h4>Carregando...</h4>
+  </div>
+  <div class="inv" id="main-content">
     <h2>Descrição: Palavras-chave</h2>
     <div class="row">
       <div class="col-md-2">
       </div>
       <div class="col-md-8">
         <div id="palavras_chave">
-          <a href="#" rel="0.1">Lorem</a>
-          <a href="#" rel="2">ipsum</a>
-          <a href="#" rel="3">dolor</a>
-          <a href="#" rel="4">sit</a>
-          <a href="#" rel="5">amet,</a>
-          <a href="#" rel="6">consectetur</a>
-          <a href="#" rel="7">adipisicing</a>
-          <a href="#" rel="8">elit,</a>
-          <a href="#" rel="5">sed</a>
-          <a href="#" rel="7">do</a>
-          <a href="#" rel="3">eiusmod</a>
-          <a href="#" rel="1">tempor</a>
-          <a href="#" rel="12">incididunt</a>
-          <a href="#" rel="1">ut</a>
-          <a href="#" rel="2">labore</a>
-          <a href="#" rel="5">et</a>
-          <a href="#" rel="7">dolore</a>
-          <a href="#" rel="1">magna</a>
-          <a href="#" rel="4">aliqua.</a>
-          <a href="#" rel="1">Ut</a>
-          <a href="#" rel="2">enim</a>
-          <a href="#" rel="10">ad</a>
-          <a href="#" rel="4">minim</a>
-          <a href="#" rel="1">veniam,</a>
-          <a href="#" rel="1">quis</a>
-          <a href="#" rel="8">nostrud</a>
-          <a href="#" rel="1">exercitation</a>
-          <a href="#" rel="3">ullamco</a>
-          <a href="#" rel="1">laboris</a>
-          <a href="#" rel="11">nisi</a>
-          <a href="#" rel="10">ut</a>
-          <a href="#" rel="3">aliquip</a>
-          <a href="#" rel="5">ex</a>
-          <a href="#" rel="1">ea</a>
-          <a href="#" rel="1">commodo</a>
-          <a href="#" rel="6">consequat.</a>
-          <a href="#" rel="1">Duis</a>
-          <a href="#" rel="1">aute</a>
-          <a href="#" rel="1">irure</a>
-          <a href="#" rel="1">dolor</a>
-          <a href="#" rel="1">in</a>
-          <a href="#" rel="1">reprehenderit</a>
-          <a href="#" rel="1">in</a>
-          <a href="#" rel="1">voluptate</a>
-          <a href="#" rel="1">velit</a>
         </div>
       </div>
       <div class="col-md-2">
@@ -127,20 +84,13 @@
       </div>
       <div class="col-md-8">
         <div id="palavras_agrupadas_chave">
-          <a href="#" rel="0.1">Banco de Dados</a>
-          <a href="#" rel="2">Proeficiência em Java</a>
-          <a href="#" rel="3">HTML, CSS e Javascript</a>
-          <a href="#" rel="4">SQL Server</a>
-          <a href="#" rel="5">HTML 5, CSS 3</a>
-          <a href="#" rel="6">Ubuntu Linux</a>
-          <a href="#" rel="7">Microsoft Windows</a>
         </div>
       </div>
     </div>
     <br>
     <br>
     <p><strong>Palavras e termos desconsiderados:</strong>
-       de, com, e, ou
+       <span id="desconsiderados"></span>
     </p>
   </div>
 
