--- a/Project/devsoft-project/site/requisitos_palavras-chave.html
+++ b/Project/devsoft-project/site/requisitos_palavras-chave.html
@@ -62,8 +62,10 @@
     </nav>
     
   </header>
-
-  <div id="main-content">
+  <div class="inv" id="carregando">
+    <h4>Carregando...</h4>
+  </div>
+  <div class="inv" id="main-content">
     <h2>Requisitos: Palavras-chave</h2>
     <div class="row">
       <div class="col-md-2">
@@ -83,13 +85,6 @@
       </div>
       <div class="col-md-8">
         <div id="palavras_agrupadas_chave">
-          <a href="#" rel="0.1">Banco de Dados</a>
-          <a href="#" rel="2">Proeficiência em Java</a>
-          <a href="#" rel="3">HTML, CSS e Javascript</a>
-          <a href="#" rel="4">SQL Server</a>
-          <a href="#" rel="5">HTML 5, CSS 3</a>
-          <a href="#" rel="6">Ubuntu Linux</a>
-          <a href="#" rel="7">Microsoft Windows</a>
         </div>
       </div>
     </div>
