--- a/Project/devsoft-project/site/vagas_por_perido.html
+++ b/Project/devsoft-project/site/vagas_por_perido.html
@@ -62,8 +62,10 @@
     </nav>
     
   </header>
-
-  <div id="main-content">
+   <div class="inv" id="carregando">
+    <h4>Carregando...</h4>
+  </div>
+  <div class="inv" id="main-content">
     <h2>Distribuição de vagas por data de publicação</h2>
     <p>
       Data Inicial: <span id="data_inicial">?</span> <br>
