--- a/Project/devsoft-project/site/resumo.html
+++ b/Project/devsoft-project/site/resumo.html
@@ -62,9 +62,13 @@
     </nav>
     
   </header>
-
-  <div id="main-content">
+  <div class="inv" id="carregando">
+    <h4>Carregando...</h4>
+  </div>
+  <div class="inv" id="main-content">
+   
     <h2>Resumo dos dados analisados</h2>
+
     <p>
       Data de coleta: <span id="data_coleta">?</span> <br>
       Total de páginas acessadas: <span id="paginas_acessadas">?</span> <br>
